# agent-sentinel

./: .gitignore  Dockerfile  Dockerfile.prebuild  README.md  build-and-run.sh  build.sh  config.json  docker.sh  greeting.txt  install.sh  install_trivy.sh  pack.sh  pyproject.toml  server.py  system_prompt.txt
.github/workflows/: deploy.yaml
app/: apis.py  handlers.py  utils.py
docs/: AGENT_SENTINEL_TECHNICAL_REPORT.md
src/agent_sentinel/: __init__.py  __main__.py  codeql_utils.py  cwe_utils.py  diff_utils.py  git_utils.py  github_utils.py  main.py  models.py  pdfkt.py  security_scanners.py  sonarqube_utils.py  static_code_checker.py  trivy_utils.py  utils.py
src/agent_sentinel/assets/css/: pdf-style.css
